-
Bug
-
Resolution: Fixed
-
P3
-
15
-
b27
-
x86_64
-
linux
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8248105 | 16 | Markus Grönlund | P3 | Resolved | Fixed | team |
The following test timed out in the JDK15 CI:
applications/kitchensink/Kitchensink24HStress.java
The log file is not helpful for this one:
result: Error. Program `/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+10-287/linux-x64-debug.jdk/jdk-15/fastdebug/bin/java' timed out (timeout set to 90000000ms, elapsed time including timeout handling was 90484392ms).
90484392ms == 1508 minutes == 25.1 hours
applications/kitchensink/Kitchensink24HStress.java
The log file is not helpful for this one:
result: Error. Program `/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+10-287/linux-x64-debug.jdk/jdk-15/fastdebug/bin/java' timed out (timeout set to 90000000ms, elapsed time including timeout handling was 90484392ms).
90484392ms == 1508 minutes == 25.1 hours
- backported by
-
JDK-8248105 Kitchensink24HStress.java failed due to timeout
-
- Resolved
-
- relates to
-
JDK-8198730 Improve detection of failure to reach a safepoint
-
- Closed
-