8239024: Kitchensink24HStress.java failed due to timeout

Reviewed-by: egahlin